[gd_scene load_steps=3 format=3 uid="uid://bltwgdnxndda4"]

[ext_resource type="Script" path="res://Menus/MainMenu/lobby_scene.gd" id="1_s88wh"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_s16jd"]
properties/0/path = NodePath("Players:text")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="LobbyScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s88wh")

[node name="Port_host" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 668.0
offset_right = 1033.0
offset_bottom = 784.0
theme_override_font_sizes/font_size = 60
placeholder_text = "Enter Port"

[node name="HostButton" type="Button" parent="."]
layout_mode = 0
offset_left = 149.0
offset_top = 830.0
offset_right = 1037.0
offset_bottom = 1055.0
theme_override_font_sizes/font_size = 70
text = "Host"

[node name="HostDropdown" type="Button" parent="."]
layout_mode = 0
offset_left = 135.0
offset_top = 70.0
offset_right = 1025.0
offset_bottom = 489.0
theme_override_font_sizes/font_size = 70
text = "Host Lobby"

[node name="JoinDropdown" type="Button" parent="."]
layout_mode = 0
offset_left = 1362.0
offset_top = 77.0
offset_right = 2252.0
offset_bottom = 496.0
theme_override_font_sizes/font_size = 70
text = "Join Lobby"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 2568.0
offset_top = 77.0
offset_right = 3458.0
offset_bottom = 496.0
theme_override_font_sizes/font_size = 70
text = "Start "

[node name="IP_host" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 135.0
offset_top = 514.0
offset_right = 1028.0
offset_bottom = 639.0
theme_override_font_sizes/font_size = 60
placeholder_text = "Enter IP address"

[node name="IP_join" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 1360.0
offset_top = 523.0
offset_right = 2253.0
offset_bottom = 648.0
theme_override_font_sizes/font_size = 60
placeholder_text = "Enter IP address"

[node name="Port_join" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 1365.0
offset_top = 677.0
offset_right = 2258.0
offset_bottom = 793.0
theme_override_font_sizes/font_size = 60
placeholder_text = "Enter Port"

[node name="JoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1374.0
offset_top = 839.0
offset_right = 2262.0
offset_bottom = 1064.0
theme_override_font_sizes/font_size = 70
text = "Join"

[node name="Name" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 2589.0
offset_top = 533.0
offset_right = 3452.0
offset_bottom = 685.0
theme_override_font_sizes/font_size = 60
placeholder_text = "Name"

[node name="Players" type="Label" parent="."]
layout_mode = 0
offset_left = 91.0
offset_top = 1232.0
offset_right = 1137.0
offset_bottom = 2151.0
theme_override_font_sizes/font_size = 65
text = "Current Players:"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_interval = 1.0
delta_interval = 1.0
replication_config = SubResource("SceneReplicationConfig_s16jd")

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="HostDropdown" to="." method="_on_host_dropdown_pressed"]
[connection signal="pressed" from="JoinDropdown" to="." method="_on_join_dropdown_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
